--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "rimraf": "2.6.1",
     "semantic-release": "^6.3.2"
   },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
   },
   "babel": {
     "presets": [
