--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:watch": "jest --watch",
     "docs": "npm run docs:readme && npm run docs:usage",
     "docs:readme": "jsdoc2md --template docTemplates/readme.hbs --partial docTemplates/sig-name.hbs --partial docTemplates/sig-link.hbs --separators  lib/*.js > README.md",
-    "docs:usage": "docco --layout parallel example/usage.js",
+    "docs:usage": "docco --layout parallel example/index.js",
     "prebuild": "rimraf dist",
     "build": "babel --out-dir dist --ignore *.test.js lib",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
