--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "precommit": "npm test",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
+    "report-coverage": "codecov",
     "docs": "npm run docs:readme && npm run docs:usage",
     "docs:readme": "jsdoc2md --template docTemplates/readme.hbs --partial docTemplates/sig-name.hbs --partial docTemplates/sig-link.hbs --separators  lib/*.js > README.md",
     "docs:usage": "docco --layout parallel example/index.js",
@@ -38,6 +39,7 @@
     "babel-jest": "19.0.0",
     "babel-preset-es2015": "6.24.0",
     "babel-preset-stage-2": "6.22.0",
+    "codecov": "2.1.0",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.0.0",
     "docco": "0.7.0",
